--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_bloc: ^6.0.2
   equatable: ^1.0.0
   wave: ^0.0.8
+  shared_preferences: ^0.5.10
 
 flutter:
   uses-material-design: true
